Clean up plane types